# zephyr

./: .ATHENA,l  .build  .gitattributes  .gitignore  .rconf  ChangeLog  FILES  INSTALL  Imakefile  Makefile  Makefile.athena  Makefile.bak  Makefile.in  NOTES  OPERATING  README  README.in  README.local  USING  VERSION  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  config.site.athena  config.status  configure  configure.ac  configure.in  ensure-dir.sh  get_vers.sh  libtool  new_vers.sh  prototype.c  release  valgrind  zephyr.pc.in
CVS/: Entries  Repository
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
clients/: Imakefile  Makefile  Makefile.in
clients/CVS/: Entries  Repository
clients/syslogd/: Imakefile  Makefile.in  logger.c  syslog.c  syslog.c.old  syslog.conf  syslog.h  syslog_patch.43tahoe  syslogd.8  syslogd.c
clients/xzwrite/: GetString.c  GetString.h  Imakefile  Makefile  Makefile.in  Makefile.old  XZwrite  XZwrite.in  associate.c  associate.h  bfgets.c  dest_window.c  destlist.c  destlist.c.old  edit_window.c  gethomedir.c  interface.c  logins.c  menu_window.c  nmalloc.c  nmalloc.h  resource.c  util.c  xzwrite-proto.h  xzwrite.1  xzwrite.c  xzwrite.h  yank.c  zephyr.c
clients/zaway/: Imakefile  Makefile  Makefile.in  zaway.1  zaway.c
clients/zctl/: ChangeLog  Imakefile  Makefile  Makefile.in  zctl.1  zctl.1.in  zctl.c  zctl_cmds.ct  zutils.c  zutils.h
clients/zleave/: Imakefile  Makefile  Makefile.in  zleave.1  zleave.c
clients/zlocate/: Imakefile  Makefile  Makefile.in  zlocate.1  zlocate.c
clients/zmailnotify/: Imakefile  Makefile  Makefile.in  zmailnotify.1  zmailnotify.c  zmailwatch.c  zmwnotify.c
clients/znol/: Imakefile  Makefile  Makefile.in  znol.1  znol.c
clients/zpopnotify/: Imakefile  Makefile  Makefile.in  zpopnotify.8  zpopnotify.c
clients/zshutdown_notify/: Imakefile  Makefile  Makefile.in  zshutdown_notify.8  zshutdown_notify.c
clients/zstat/: Imakefile  Makefile  Makefile.in  zserver.h  zstat.8  zstat.c
clients/zwgc/: Imakefile  Makefile.in  X_driver.c  X_driver.h  X_fonts.c  X_fonts.h  X_gram.c  X_gram.h  browser.h  buffer.c  buffer.h  character_class.c  character_class.h  dictionary.c  dictionary.h  display.c  error.c  error.h  eval.c  exec.c  file.c  file.h  formatter.c  formatter.h  generate_instance  generate_stack_instance  lexer.c  lexer.h  main.c  main.h  mux.c  mux.h  new_memory.c  new_string.c  new_string.h  node.c  notice.c  notice.h  parser.h  parser.y  (+36 more)
clients/zwrite/: Imakefile  Makefile  Makefile.in  zwrite.1  zwrite.c
config/: .Imake.rules,l  .Imake.tmpl,l  .mkdirhier.sh,l  Imake.rules  Imake.tmpl  site.def  zephyr.rules
contrib/: zephyr-dissector.lua
debian/: .gitattributes  README.Debian  README.krb4-5  TODO  changelog  control  copyright  cron.d.ex  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  ex.doc-base.package  init.d.ex  libzephyr-dev.files  libzephyr-python.files  libzephyr4-krb5.templates  manpage.1.ex  manpage.sgml.ex  menu.ex  patch.no_kerberos_support  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex  zephyr-client.config  zephyr-client.init  zephyr-client.postinst  zephyr-client.prerm  zephyr-client.templates  zephyr-clients.config  zephyr-clients.docs  zephyr-clients.files  zephyr-clients.init  zephyr-clients.postinst  zephyr-clients.preinst  zephyr-clients.prerm  zephyr-clients.templates  (+10 more)
debian/acl/: class-registry.acl  xmt-zephyr_ctl.acl
debian/po/: cs.po  de.po  es.po  fr.po  ja.po  nl.po  pt.po  pt_BR.po  ru.po  tr.po  vi.po
h/: ChangeLog  Imakefile  config.h  config.h.in  dyn.h  internal.h  sysdep.h
h/CVS/: Entries  Repository  Root
h/zephyr/: Imakefile  acl.h  mit-copyright.h  zephyr.h  zephyr.h.in  zephyr.h.orig  zephyr_conf.h  zephyr_err.h  zephyr_internal.h  zsyslog.h
lib/: ChangeLog  Imakefile  Makefile  Makefile.in  Makefile.in.orig  ZAsyncLocate.c  ZCkAuth.c  ZCkIfNot.c  ZCkZAut.c  ZCkZAut.c.orig  ZClosePort.c  ZCmpUID.c  ZCmpUIDP.c  ZDumpSession.c  ZExpnRlm.c  ZFlsLocs.c  ZFlsSubs.c  ZFmtAuth.c  ZFmtList.c  ZFmtNotice.c  ZFmtRaw.c  ZFmtRawLst.c  ZFmtSmRLst.c  ZFmtSmRaw.c  ZFreeNot.c  ZGetDefRlm.c  ZGetLocs.c  ZGetRhs.c  ZGetSender.c  ZGetSubs.c  ZGetWGPort.c  ZIfNotice.c  ZInit.c  ZLocateU.c  ZLocations.c  ZMakeAscii.c  ZMakeZcode.c  ZMkAuth.c  ZNewLocU.c  ZOpenPort.c  (+43 more)
lib/CVS/: Entries  (+1 more)
libdes/: ChangeLog  Imakefile  Makefile  debug_decl.c  des.h  desglue.c  f_cbc.c  f_cksum.c  f_ecb.c  f_parity.c  f_pcbc.c  f_sched.c  f_tables.c  f_tables.h  key_sched.c  quad_cksum.c  random_key.c  string_to_key.c  weak_key.c
libdyn/: Makefile  Makefile.in  Makefile.old  dyn.3  dynP.h  dyn_append.c  dyn_create.c  dyn_debug.c  dyn_delete.c  dyn_insert.c  dyn_paranoid.c  dyn_put.c  dyn_realloc.c  dyn_size.c  dyntest.c
logs/: ChangeLog.1992  changes.ghudson  tag.77
python/: szc.py  zephyr.py  zephyr_ctypes.py
server/: BUGS  ChangeLog  Imakefile  Makefile  Makefile.in  access.c  access.h  acl.h  acl_files.c  bdump.c  class.c  client.c  common.c  default.subscriptions  dispatch.c  dispatch.c.auth  dispatch.c.orig  global.c  hostm.c  kopt.c  kopt.c.auth  kopt.c.old  kopt.c.orig  kstuff.c  kstuff.c.auth  kstuff.c.orig  main.c  main.c.auth  new.h  new_vers.sh  realm.c  realm.c.orig  server.c  subscr.c  subscr.c.orig  test_server.c  timer.c  timer.h  uloc.c  unix.h  (+15 more)
tools/: makeconfig  makepaths  zlook  zsubscriptions
util/: configure.in
zephyr/: README  TODO  acconfig.h  aclocal.m4  athena-version  configure  configure.in
zhm/: ChangeLog  Imakefile  Makefile  Makefile.in  TODO  queue.c  timer.c  zhm.8  zhm.8.in  zhm.c  zhm.h  zhm_client.c  zhm_server.c
zwgc/: .gitattributes  ChangeLog  Imakefile  Makefile  Makefile.in  X_driver.c  X_driver.h  X_fonts.c  X_fonts.h  X_gram.c  X_gram.h  browser.c  browser.h  buffer.c  buffer.h  character_class.c  character_class.c.orig  character_class.h  dictionary.c  dictionary.h  display.c  error.c  error.h  eval.c  eval.h  exec.c  exec.h  file.c  file.h  formatter.c  formatter.h  generate_stack_instance  instantiate  lexer.c  lexer.h  main.c  main.h  mux.c  mux.h  new_memory.c  (+54 more)
(+412 files in other folders)
